Implementação do Header e do NavBar

--- a/vinovibe/src/app/app.component.html
+++ b/vinovibe/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-header class="header"></app-header>
-  <main class="container">
-      <router-outlet></router-outlet>
-  </main>
+<app-navbar></app-navbar>
+<div class="bar-separator"></div>
+<main class="body">
+  <router-outlet></router-outlet>
+</main>
+<div class="bar-separator"></div>
+
 <app-footer class="footer"></app-footer>
