--- a/vinovibe/src/styles.css
+++ b/vinovibe/src/styles.css
@@ -1,3 +1,77 @@
-.btn-primary {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Montserrat", sans-serif;
 }
+
+.btn-primary {
+  background-color: #ba1628;
+  border: 1px solid #966c80;
+  font-weight: 500;
+  min-width: 150px;
+  padding: 8px;
+  font-size: 13px;
+  border-radius: 10px;
+  color: #fff;
+  box-shadow: 1px 1px;
+}
+
+.btn-primary:hover {
+  background-color: #a11321;
+  border: 1px solid #a11321;
+}
+
+.btn-secondary {
+  background-color: #fff;
+  border: 1px solid #ba1628;
+  font-weight: 500;
+  min-width: 150px;
+  padding: 8px;
+  font-size: 13px;
+  border-radius: 10px;
+  color: #ba1628;
+  box-shadow: 1px 1px;
+}
+
+.btn-secondary:hover {
+  background-color: #f0f0f099;
+  border: 1px solid #a11321;
+}
+
+.btn-success {
+  background-color: #28a745;
+  border: 1px solid #28a745;
+  font-weight: 500;
+  min-width: 150px;
+  padding: 8px;
+  font-size: 13px;
+  border-radius: 10px;
+  color: #fff;
+  box-shadow: 1px 1px;
+}
+
+.btn-success:hover {
+  background-color: #2fbe50;
+  border: 1px solid #2fbe50;
+}
+
+.input {
+  padding: 10px;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+
+.bar-separator{
+  width: 100vw;
+  height: 1px;
+  box-shadow: 0 1px 4px 0 rgba(30, 30, 30, .2);
+  color: #a11321;
+}
+
+.body {
+  background-color: #fafafa;
+  height: 100vh;
+}
+
