--- a/vinovibe/src/app/components/pages/home/home.component.html
+++ b/vinovibe/src/app/components/pages/home/home.component.html
@@ -1,13 +1,10 @@
 <body class="body home">
   <div class="home-container">
-    <p>TESTE DEPLOY GITHUB ACTIONS teste 1</p>
+    <p>TESTE DEPLOY</p>
 
     <button class="btn-primary">Primary</button>
     <button class="btn-secondary">Secondary</button>
     <button class="btn-success">Sucess</button>
-
-
-
   </div>
 </body>
 
