--- a/vinovibe/src/app/components/pages/home/home.component.html
+++ b/vinovibe/src/app/components/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <body class="body home">
   <div class="home-container">
-    <p>TESTE DEPLOY2</p>
+    <p>HOME</p>
 
     <button class="btn-primary">Primary</button>
     <button class="btn-secondary">Secondary</button>
