--- a/vinovibe/src/app/components/pages/login/login.component.html
+++ b/vinovibe/src/app/components/pages/login/login.component.html
@@ -1,1 +1,63 @@
-<p>Login</p>
+<div class="login-container">
+  <div class="login-left">
+    <form class="login-form" id="loginForm">
+      <h2 class="form-title">Login</h2>
+      <div class="form-group">
+        <label for="email">Email: <span class="danger-required">*</span></label>
+        <input type="email" id="loginEmail" class="form-control" placeholder="example@example.com" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password: <span class="danger-required">*</span></label>
+        <input type="password" id="loginPassword" class="form-control" placeholder="Enter your password" required>
+        <a class="forgot-password" (click)="navigateTo('recoveryPassword')">Forgot Password?</a>
+      </div>
+      <div class="form-group button-group">
+        <button type="submit" class="btn btn-primary btn-login">Login</button>
+        <div class="register-text">
+          <div class="divider-container">
+            <hr class="divider">
+            <p class="divider-text">OR</p>
+          </div>
+        </div>
+        <button  type="button" (click)="navigateTo('register')" class="btn btn-secondary btn-register">Register</button>
+      </div>
+    </form>
+  </div>
+  <div class="login-right">
+    <div class="content-center">
+      <div class="title-right">
+        <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48" viewBox="0 0 512 512">
+          <path fill="#ba1628"
+            d="M393.4 9.4c12.5-12.5 32.8-12.5 45.3 0l64 64c12.5 12.5 12.5 32.8 0 45.3c-11.8 11.8-30.7 12.5-43.2 1.9l-9.5 9.5-48.8 48.8c-9.2 9.2-11.5 22.9-8.6 35.6c9.4 40.9-1.9 85.6-33.8 117.5L197.3 493.3c-25 25-65.5 25-90.5 0l-88-88c-25-25-25-65.5 0-90.5L180.2 153.3c31.9-31.9 76.6-43.1 117.5-33.8c12.6 2.9 26.4 .5 35.5-8.6l48.8-48.8 9.5-9.5c-10.6-12.6-10-31.4 1.9-43.2zM99.3 347.3l65.4 65.4c6.2 6.2 16.4 6.2 22.6 0l97.4-97.4c6.2-6.2 6.2-16.4 0-22.6l-65.4-65.4c-6.2-6.2-16.4-6.2-22.6 0L99.3 324.7c-6.2 6.2-6.2 16.4 0 22.6z" />
+        </svg>
+        <h2 class="logo">VINOVIBE</h2>
+      </div>
+      <div class="highlight">
+        <h3>🍷 Bem-vindo à Vinovibe!</h3>
+        <p>Uma plataforma inovadora para amantes do vinho.</p>
+      </div>
+      <div class="features">
+        <h4>Descubra & Avalie</h4>
+        <p>Explore vinhos cadastrados por outros usuários, avalie e comente sobre eles.</p>
+        <h4>Crie Suas Coleções</h4>
+        <p>Crie suas próprias coleções e avaliações detalhadas.</p>
+        <h4>Aprenda & Conecte-se</h4>
+        <p>Aprenda sobre diferentes variedades de uvas e métodos de vinificação. Conecte-se com uma comunidade global de
+          apreciadores de vinho.</p>
+      </div>
+      <div class="highlight">
+        <h3>🍷 Welcome to Vinovibe!</h3>
+        <p>An innovative platform for wine lovers.</p>
+      </div>
+      <div class="features">
+        <h4>Discover & Rate</h4>
+        <p>Explore wines registered by other users, rate and comment on them.</p>
+        <h4>Create Your Collections</h4>
+        <p>Create your own collections and detailed reviews.</p>
+        <h4>Learn & Connect</h4>
+        <p>Learn about different grape varieties and winemaking methods. Connect with a global community of wine
+          enthusiasts.</p>
+      </div>
+    </div>
+  </div>
+</div>
