--- a/vinovibe/src/app/components/header/header.component.css
+++ b/vinovibe/src/app/components/header/header.component.css
@@ -3,7 +3,7 @@
   padding: 10px;
   justify-content: space-between;
   z-index: 1000;
-  
+
 }
 
 .search {
@@ -24,7 +24,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(186, 22, 40);
+  color: #ba1628;
   font-size: 24px;
 }
 
