Finalização dos cards de recovery password, login, register

--- a/vinovibe/src/app/components/pages/recovery-password/recovery-password.component.css
+++ b/vinovibe/src/app/components/pages/recovery-password/recovery-password.component.css
@@ -1,9 +1,9 @@
-.register-container {
+.recovery-container {
   display: flex;
   height: 100vh;
 }
 
-.register-left {
+.recovery-left {
   background-color: #eae0da;
   width: 25%;
   display: flex;
@@ -11,7 +11,7 @@
   align-items: center;
 }
 
-.register-content {
+.recovery-content {
   text-align: center;
 }
 
@@ -27,17 +27,32 @@
   height: auto;
 }
 
-.register-message {
+.recovery-message {
   margin-bottom: 20px;
 }
 
-.register-form {
+.recovery-form {
   width: 75%;
   text-align: center;
 }
 
-.register-form h2 {
+.recovery-form h2 {
   margin-bottom: 20px;
+}
+
+.back-button {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.back-button svg {
+  width: 20px;
+  height: 20px;
 }
 
 .form-group {
@@ -62,7 +77,7 @@
   align-items: center;
 }
 
-.btn-register {
+.btn-recovery {
   margin-top: 30px;
   width: 60%;
 }
@@ -88,7 +103,7 @@
   padding: 0 10px;
 }
 
-.register-text {
+.recovery-text {
   margin: 10px 0;
   text-align: center;
   font-size: 14px;
@@ -96,7 +111,7 @@
   color: #ba1628;
 }
 
-.register-right {
+.recovery-right {
   width: 75%;
   background-color: #fafafa;
   display: flex;
