--- a/vinovibe/src/app/components/pages/recovery-password/recovery-password.component.html
+++ b/vinovibe/src/app/components/pages/recovery-password/recovery-password.component.html
@@ -1,22 +1,28 @@
-<div class="register-container">
-  <div class="register-left">
-    <form class="register-form" id="registerForm">
+<div class="recovery-container">
+  <div class="recovery-left">
+    <button class="back-button" (click)="navigateTo('login')">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20">
+        <path fill="#ba1628"
+          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+      </svg>
+    </button>
+    <form class="recovery-form" id="recoveryForm">
       <h2 class="form-title">Recovery Password</h2>
       <div class="form-group">
         <label for="fullname">Name: <span class="danger-required">*</span></label>
-        <input type="text" id="Registerfullname" class="form-control" placeholder="Enter your full name" required>
+        <input type="text" id="recoveryfullname" class="form-control" placeholder="Enter your full name" required>
       </div>
       <div class="form-group">
         <label for="birthDate">Birth: <span class="danger-required">*</span></label>
         <input type="date" id="birthDate" class="form-control" required>
       </div>
       <div class="form-group">
-        <label for="registerEmail">Email: <span class="danger-required">*</span></label>
-        <input type="email" id="registerEmail" class="form-control" placeholder="Enter your email login" required>
+        <label for="recoveryEmail">Email: <span class="danger-required">*</span></label>
+        <input type="email" id="recoveryEmail" class="form-control" placeholder="Enter your email login" required>
       </div>
       <div class="form-group">
         <label for="password">New Password: <span class="danger-required">*</span></label>
-        <input type="password" id="registerPassword" class="form-control" placeholder="Enter your new password" required>
+        <input type="password" id="recoveryPassword" class="form-control" placeholder="Enter your new password" required>
       </div>
       <div class="form-group">
         <label for="password">Confirm Password: <span class="danger-required">*</span></label>
@@ -27,7 +33,7 @@
       </div>
     </form>
   </div>
-  <div class="register-right">
+  <div class="recovery-right">
     <div class="content-center">
       <div class="title-right">
         <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48" viewBox="0 0 512 512">
@@ -55,7 +61,7 @@
       </div>
       <div class="features">
         <h4>Discover & Rate</h4>
-        <p>Explore wines registered by other users, rate and comment on them.</p>
+        <p>Explore wines recoveryed by other users, rate and comment on them.</p>
         <h4>Create Your Collections</h4>
         <p>Create your own collections and detailed reviews.</p>
         <h4>Learn & Connect</h4>
