--- a/vinovibe/src/app/components/pages/home/home.component.html
+++ b/vinovibe/src/app/components/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <body class="body home">
   <div class="home-container">
+    <app-card-wine [wine]="wine" [userRating]="userRating"></app-card-wine>
   </div>  
 </body>
 
