--- a/vinovibe/src/app/components/card-wine/card-wine.component.css
+++ b/vinovibe/src/app/components/card-wine/card-wine.component.css
@@ -1,172 +1,111 @@
 .wine-card {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #e6e6e6;
-    border-radius: 8px;
-    overflow: hidden;
-    margin: 16px 0;
-    max-height: 350px;
-    max-width:650px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .wine-card-left {
-    position: relative;
-    width: 25%;
-    overflow: hidden;
-  }
-  
-  .wine-card-left img {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .discount-badge {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    background: #ba1628;
-    color: white;
-    padding: 5px;
-    border-radius: 4px;
-    font-size: 12px;
-  }
-  
-  .wine-card-right {
-    padding: 16px;
-    width: 75%;
-  }
-  
-  .wine-info {
-    margin-bottom: 16px;
-  }
-  
-  .wine-name {
-    font-size: 24px;
-    margin: 0;
-  }
-  
-  .wine-type {
-    font-size: 18px;
-    margin: 8px 0;
-  }
-  
-  .wine-location img {
-    margin-right: 8px;
-    vertical-align: middle;
-  }
-  
-  .wine-rating-section {
-    display: flex;
-    align-items: center;
-    margin: 16px 0;
-  }
-  
-  .wine-rating-value {
-    font-size: 24px;
-    margin-right: 8px;
-  }
-  
-  .wine-rating-stars {
-    display: flex;
-  }
-  
-  .star {
-    width: 16px;
-    height: 16px;
-    background: url('/assets/star-regular.svg') no-repeat center center;
-    background-size: contain;
-    display: inline-block;
-  }
-  
-  .full-star {
-    background-position: 0 0;
-  }
-  
-  .half-star {
-    background-position: 0 -16px;
-  }
-  
-  .empty-star {
-    background-position: 0 -32px;
-  }
-  
-  .wine-rating-count {
-    margin-left: 8px;
-    font-size: 14px;
-    color: #888;
-  }
-  
-  .wine-price-section {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .current-price {
-    font-size: 20px;
-    color: #ba1628;
-    margin-bottom: 4px;
-  }
-  
-  .original-price {
-    font-size: 16px;
-    color: #888;
-    text-decoration: line-through;
-  }
-  
-  .wine-card-footer {
-    padding: 16px;
-    background: #f9f9f9;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .user-review {
-    margin-bottom: 16px;
-  }
-  
-  .user-rating {
-    display: flex;
-    align-items: center;
-    margin-bottom: 8px;
-  }
-  
-  .user-rating-star {
-    width: 16px;
-    height: 16px;
-    margin-right: 4px;
-  }
-  
-  .user-rating-value {
-    font-size: 16px;
-  }
-  
-  .user-comment {
-    font-size: 14px;
-    color: #555;
-  }
-  
-  .user-info {
-    display: flex;
-    align-items: center;
-  }
-  
-  .user-avatar {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    margin-right: 8px;
-  }
-  
-  .user-name {
-    font-weight: bold;
-    margin-right: 8px;
-  }
-  
-  .user-classifications,
-  .user-date {
-    font-size: 12px;
-    color: #888;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #e6e6e6;
+  border-radius: 25px;
+  overflow: hidden;
+  margin: 16px 0;
+  max-height: 350px;
+  max-width: 550px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.wine-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 16px;
+  margin-top: 25px
+}
+
+.wine-card-left {
+  position: relative;
+  width: 25%;
+  overflow: hidden;
+}
+
+.wine-card-left img {
+  width: 100%;
+  height: 100%;
+  margin-right: 30%;
+}
+
+.wine-details {
+  padding: 10px;
+  width: 75%;
+}
+
+.wine-name {
+  font-size: 24px;
+  margin: 0;
+}
+
+.wine-type, .wine-uva, .wine-safra, .wine-location {
+  font-size: 18px;
+  margin: 8px 0;
+}
+
+.wine-rating-section {
+  display: flex;
+  align-items: center;
+  width: 45%;
+}
+
+.wine-rating-value {
+  font-size: 24px;
+  margin-right: 8px;
+}
+
+.wine-rating-bar {
+  position: relative;
+  width: 100%;
+  height: 10px;
+  background-color: #e0e0e0;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-top: 8px;
+}
+
+.wine-rating-bar-fill {
+  height: 100%;
+  background-color: #ba1628;
+  border-radius: 8px 0 0 8px;
+}
+
+.wine-rating-count {
+  margin-left: 8px;
+  font-size: 14px;
+  color: #888;
+}
+
+.user-comment {
+  font-size: 14px;
+  color: #555;
+  font-style: italic;
+}
+
+.user-name {
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+.user-date {
+  font-size: 12px;
+  color: #888;
+}
+
+.user-review {
+  margin-bottom: 16px;
+}
+
+.wine-card-footer {
+  padding: 16px;
+  background: #e9dada;
+  display: flex;
+  flex-direction: column;
+}
+
+.price-button-section{
+  margin-top: 50%
+}
