--- a/vinovibe/src/styles.css
+++ b/vinovibe/src/styles.css
@@ -105,3 +105,41 @@
   width: 20px;
   height: 20px;
 }
+
+@import '~sweetalert2/src/sweetalert2.scss';
+
+.swal-success {
+  max-width: 75%;
+  background-color: #d4edda !important;
+  color: #155724 !important;
+}
+
+.swal-error {
+  max-width: 75%;
+  background-color: #f8d7da !important;
+  color: #954149 !important;
+}
+
+.swal-warning {
+  max-width: 75%;
+  background-color: #fff3cd !important;
+  color: #ddbb56 !important;
+}
+
+.swal-info {
+  max-width: 75%;
+  background-color: #d1ecf1 !important;
+  color: #4472e6 !important;
+}
+
+.swal2-title {
+  font-weight: 500;
+  font-size: 14px;
+  margin-bottom: 0.5em;
+}
+
+.swal2-content {
+  font-weight: 500;
+  font-size: 14px;
+}
+
